--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,9 +1,80 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Responsive Layout</title>
+<style>
+
+/********** Base styles **********/
+* {
+  box-sizing: border-box;
+}
+h1 {
+  margin-bottom: 15px;
+}
+
+p {
+  border: 1px solid black;
+  background-color: #A52A2A;
+  height: 150px;
+  margin-right: 20px;
+  margin-left: 20px;
+  font-family: Helvetica;
+  color: white;
+}
+
+/* Simple Responsive Framework. */
+.row {
+  width: 100%;
+}
+
+/* Large devices */
+@media (min-width: 992px) {
+  .col-lg-4 {
+    float: left;
+    border: 1px solid green;
+  }
+  .col-lg-4 {
+    width: 33.33%;
+  }
+}
+
+/* Medium devices */
+@media (min-width: 768px) and (max-width: 991px) {
+  .col-md-6, .col-md-12 {
+    float: left;
+    border: 1px solid green;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-12 {
+    width: 100%;
+  }
+}
+
+/* Small devices */
+@media (max-width: 767px) {
+  .col-sd-12 {
+    float: left;
+    border: 1px solid green;
+  }
+  .col-sd-12 {
+    width: 100%;
+  }
+}
+
+</style>
 </head>
 <body>
-<h1>Hello Coursera!</h1>
+<h1>Responsive Layout</h1>
+
+<div class="row">
+  <div class="col-lg-4 col-md-6 col-sd-12"><p>Item 1</p></div>
+  <div class="col-lg-4 col-md-6 col-sd-12"><p>Item 2</p></div>
+  <div class="col-lg-4 col-md-12 col-sd-12"><p>Item 3</p></div>
+</div>
+
 </body>
 </html>
