--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,66 +4,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Responsive Layout</title>
+<link rel="stylesheet" href="css/style.css">
 <style>
-
-/********** Base styles **********/
-* {
-  box-sizing: border-box;
-}
-h1 {
-  margin-bottom: 15px;
-}
-
-p {
-  border: 1px solid black;
-  background-color: #A52A2A;
-  height: 150px;
-  margin-right: 20px;
-  margin-left: 20px;
-  font-family: Helvetica;
-  color: white;
-}
-
-/* Simple Responsive Framework. */
-.row {
-  width: 100%;
-}
-
-/* Large devices */
-@media (min-width: 992px) {
-  .col-lg-4 {
-    float: left;
-    border: 1px solid green;
-  }
-  .col-lg-4 {
-    width: 33.33%;
-  }
-}
-
-/* Medium devices */
-@media (min-width: 768px) and (max-width: 991px) {
-  .col-md-6, .col-md-12 {
-    float: left;
-    border: 1px solid green;
-  }
-  .col-md-6 {
-    width: 50%;
-  }
-  .col-md-12 {
-    width: 100%;
-  }
-}
-
-/* Small devices */
-@media (max-width: 767px) {
-  .col-sd-12 {
-    float: left;
-    border: 1px solid green;
-  }
-  .col-sd-12 {
-    width: 100%;
-  }
-}
 
 </style>
 </head>
@@ -71,9 +13,18 @@ p {
 <h1>Responsive Layout</h1>
 
 <div class="row">
-  <div class="col-lg-4 col-md-6 col-sd-12"><p>Item 1</p></div>
-  <div class="col-lg-4 col-md-6 col-sd-12"><p>Item 2</p></div>
-  <div class="col-lg-4 col-md-12 col-sd-12"><p>Item 3</p></div>
+  <div class="col-lg-4 col-md-6 col-sd-12">
+  	<h2>111</h2>
+  	<p>111</p>
+  </div>
+  <div class="col-lg-4 col-md-6 col-sd-12">
+  	<h2>222</h2>
+  	<p>222</p>
+  </div>
+  <div class="col-lg-4 col-md-12 col-sd-12">
+  	<h2>333</h2>
+  	<p>333</p>
+  </div>
 </div>
 
 </body>
