--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -5,25 +5,28 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Responsive Layout</title>
 <link rel="stylesheet" href="css/style.css">
-<style>
-
-</style>
 </head>
 <body>
 <h1>Responsive Layout</h1>
 
 <div class="row">
-  <div class="col-lg-4 col-md-6 col-sd-12">
-  	<h2>111</h2>
-  	<p>111</p>
+  <div class="col-lg-4 col-md-6 col-sm-12">
+    <div class="crazy">
+      <h2>111</h2>
+      <p>111</p>
+    </div>
   </div>
-  <div class="col-lg-4 col-md-6 col-sd-12">
-  	<h2>222</h2>
-  	<p>222</p>
+  <div class="col-lg-4 col-md-6 col-sm-12">
+    <div class="crazy">
+      <h2>222</h2>
+      <p>222</p>
+    </div>
   </div>
-  <div class="col-lg-4 col-md-12 col-sd-12">
-  	<h2>333</h2>
-  	<p>333</p>
+  <div class="col-lg-4 col-md-12 col-sm-12">
+    <div class="crazy">
+      <h2>333</h2>
+      <p>333</p>
+    </div>
   </div>
 </div>
 
