--- a/combined_click_hover/index.html
+++ b/combined_click_hover/index.html
@@ -136,6 +136,19 @@
       .red {
         background: red;
       }
+
+
+
+      li a:hover, .dropdown:hover .dropbtn {
+        background-color: red;
+      }
+
+      .dropdown-content a:hover {
+        background-color: #f1f1f1;
+      }
+
+
+
     </style>
     <script>
       function openclose() {
