--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>Solution Module 4</title>
-    <script src="SpeakHello.js"></script>
-    <script src="SpeakGoodBye.js"></script>
-    <script src="script.js"></script>
-</head>
-<body>
-    <h1>Solution Module 4</h1>
-    <p>Please, check out the console in the web developer tools</p>
-</body>
+	<head>
+	    <title>Solution Module 4</title>
+	    <script>
+
+		    function HiBye() {
+			    var names = ["Yaakov", "John", "Jen", "Jason", "Paul", "Frank", "Larry", "Paula", "Laura", "Jim"];
+			    for (var i = 0; i < names.length; i++) {
+			        var firstLetter = names[i].charAt(0).toLowerCase();
+			        if (firstLetter === 'j') {
+			            Bye(names[i]);
+			        } else {
+			            Hi(names[i]);
+			        }
+			    }
+			};
+
+			function Hi (name) {
+			    console.log("Hi " + name);
+			};
+
+			function Bye (name) {
+			    console.log("Bye " + name);
+			};
+
+	    </script>
+	</head>
+	<body>
+	    <h1>Solution Module 4</h1>
+	    <p>Please, check out the console in the web developer tools</p>
+	</body>
 </html>
